refactor: Adjust UI and sync logic for responsiveness
This commit refactors the UI elements and the state synchronization logic to improve the application's responsiveness and robustness.

UI adjustments include:
- Resizing checkboxes and quest rows to be smaller on mobile devices, with larger sizes reapplying on larger screens via media queries.
- Modifying text size adjustments for quest entries to be responsive, ensuring readability across different screen sizes.
- Updating the player status header to use a more flexible grid template for columns and adjust text sizes based on the number of columns.

Synchronization logic improvements:
- The `pushState` function in `firebaseService` now creates a cleaner copy of the state for storage, specifically excluding functions and internal sync flags, preventing potential issues with non-serializable data.
- The `applyRemoteState` function in the store logic has been updated to perform a more robust comparison before updating the state, preventing unnecessary re-renders and infinite loops by comparing essential data properties.
- `firebaseService.subscribeToChanges` now ensures it only passes the `state` object to the `onUpdate` callback.

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 
       /* LARGE HIGH-SHINING HUD CHECKBOX */
       .checkbox-hud {
-        width: 28px; /* Increased size */
-        height: 28px;
-        border: 3px solid var(--neon-blue);
+        width: 20px; /* Smaller for mobile */
+        height: 20px; /* Smaller for mobile */
+        border: 2px solid var(--neon-blue);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -138,6 +138,14 @@
         background: rgba(6, 182, 212, 0.1);
         position: relative;
         box-shadow: 0 0 10px rgba(6, 182, 212, 0.3), inset 0 0 8px var(--neon-blue-glow);
+      }
+
+      @media (min-width: 640px) {
+        .checkbox-hud {
+          width: 28px;
+          height: 28px;
+          border-width: 3px;
+        }
       }
 
       .checkbox-hud.checked {
@@ -209,13 +217,21 @@
       ::-webkit-scrollbar { display: none; }
       
       .quest-row {
-        height: 40px; /* Reduced to ensure visibility */
-        min-height: 40px;
-        padding: 0 16px;
+        height: 32px; /* Reduced for mobile */
+        min-height: 32px;
+        padding: 0 12px;
         border-radius: 6px;
         background: rgba(6, 182, 212, 0.05);
         transition: all 0.2s ease;
         border: 1px solid rgba(6, 182, 212, 0.1);
+      }
+
+      @media (min-width: 640px) {
+        .quest-row {
+          height: 40px;
+          min-height: 40px;
+          padding: 0 16px;
+        }
       }
 
       .quest-row:hover {
