feat(electron): Configure app for Electron builds and development
Integrates Electron into the project by updating `package.json` scripts and dependencies. Adds Electron-specific configuration for building and packaging the application, and adjusts the `main.ts` to correctly load the application URL in both development and production environments. Includes necessary path and URL modules for Electron's ES module compatibility.

--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.46.1",
     "@capacitor/cli": "https://esm.sh/@capacitor/cli@^8.1.0",
     "electron": "https://esm.sh/electron@^40.4.1",
-    "path": "https://esm.sh/path@^0.12.7"
+    "path": "https://esm.sh/path@^0.12.7",
+    "url": "https://esm.sh/url@^0.11.4"
   }
 }
 </script>
